--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardBestSellers/DashboardBestSellers.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardBestSellers/DashboardBestSellers.razor
@@ -9,24 +9,50 @@
         </Div>
         <Divider></Divider>
         <Div>
-            @foreach (var item in Values)
+            @if (Loading)
             {
-                <Div Class="d-flex align-items-center w-100 best-seller">
-                    <Div Class="best-seller-image">
-                        <img class="img-fluid" src="@item.ImageUrl" />
+                for (int i = 0; i < 3; i++)
+                {
+                    <Div Class="d-flex align-items-center w-100 best-seller">
+                        <Div Class="best-seller-image">
+                            <Skeleton>
+                                <SkeletonItem ColumnSize="ColumnSize.Is10" Style="min-height: 50px;"></SkeletonItem>
+                            </Skeleton>
+                        </Div>
+                        <Div Class="best-seller-details">
+                            <Skeleton>
+                                <SkeletonItem ColumnSize="ColumnSize.Is9"></SkeletonItem>
+                                <br />
+                                <SkeletonItem ColumnSize="ColumnSize.Is6"></SkeletonItem>
+                                <br />
+                                <SkeletonItem ColumnSize="ColumnSize.Is3"></SkeletonItem>
+                            </Skeleton>
+                        </Div>
                     </Div>
-                    <Div Class="best-seller-details">
-                        <h5>@item.ItemName</h5>
-                        <Div Class="best-seller-amount"><Span>@Constant.CurrencySymbol</Span>@item.Amount.ToString("N2")</Div>
-                        <div class="stats-progress">
-                            <div class="progress-bar">
-                                <div class="progress" style="width: @(Math.Abs(item.Percentage))%"></div>
+                    <Divider></Divider>
+                }
+            }
+            else
+            {
+                foreach (var item in Values)
+                {
+                    <Div Class="d-flex align-items-center w-100 best-seller">
+                        <Div Class="best-seller-image">
+                            <img class="img-fluid" src="@item.ImageUrl" />
+                        </Div>
+                        <Div Class="best-seller-details">
+                            <h5>@item.ItemName</h5>
+                            <Div Class="best-seller-amount"><Span>@Constant.CurrencySymbol</Span>@item.Amount.ToString("N2")</Div>
+                            <div class="stats-progress">
+                                <div class="progress-bar">
+                                    <div class="progress" style="width: @(Math.Abs(item.Percentage))%"></div>
+                                </div>
                             </div>
-                        </div>
-                        <Div Class="best-seller-quantity"><Span>@item.Quantity</Span>@L["Sold"]</Div>
+                            <Div Class="best-seller-quantity"><Span>@item.Quantity</Span>@L["Sold"]</Div>
+                        </Div>
                     </Div>
-                </Div>
-                <Divider></Divider>
+                    <Divider></Divider>
+                }
             }
         </Div>
     </CardBody>
