--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardStats/DashboardStats.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardStats/DashboardStats.razor
@@ -1,4 +1,5 @@
-﻿@inherits PikachuComponentBase
+﻿@using Kooco.Pikachu.Dashboards
+@inherits PikachuComponentBase
 
 <div class="dashboard-stats">
     @foreach (var stat in Stats)
@@ -8,14 +9,23 @@
                 <i class="fas @stat.Icon"></i>
             </div>
             <div class="stats-info">
-                <h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">@(stat.DisplayValue)</font></font></h3>
-                <p><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">@(stat.Name)</font></font></p>
+                @if (Loading)
+                {
+                    <Skeleton Animation="SkeletonAnimation.Pulse">
+                        <SkeletonItem ColumnSize="ColumnSize.Is6"></SkeletonItem>
+                    </Skeleton>
+                }
+                else
+                {
+                    <h3>@(stat.DisplayValue)</h3>
+                }
+                <p class="m-0">@(stat.Name)</p>
             </div>
             <div class="stats-progress">
                 <div class="progress-bar">
                     <div class="progress @(stat.Color)" style="width: @(Math.Abs(stat.GrowthOrLoss))%"></div>
                 </div>
-                <span><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">@(stat.GrowthOrLoss)% growth</font></font></span>
+                <span>@(stat.GrowthOrLoss)% growth</span>
             </div>
         </div>
     }
