--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardCharts/DashboardCharts.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardCharts/DashboardCharts.razor
@@ -5,14 +5,22 @@
     <Column ColumnSize="ColumnSize.Is12.Is8.OnFullHD">
         <Card>
             <CardBody>
-                <Div id="@BarChartId"></Div>
+                @if (Loading)
+                {
+                    <SkeletonTable Rows="5" Columns="1"></SkeletonTable>
+                }
+                <Div id="@BarChartId" Display="Loading ? Display.None : Display.Block"></Div>
             </CardBody>
         </Card>
     </Column>
     <Column ColumnSize="ColumnSize.Is12.Is4.OnFullHD">
         <Card>
             <CardBody>
-                <Div id="@DonutChartId"></Div>
+                @if (Loading)
+                {
+                    <SkeletonTable Rows="5" Columns="1"></SkeletonTable>
+                }
+                <Div id="@DonutChartId" Display="Loading ? Display.None : Display.Block"></Div>
             </CardBody>
         </Card>
     </Column>
