#PK-1196 Optimized dashboard

--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
@@ -77,7 +77,7 @@
     <Column ColumnSize="ColumnSize.Is12.Is8.OnFullHD">
         <Card>
             <CardBody>
-                <Div Class="d-flex align-items-center justify-content-between">
+                <Div Class="d-flex align-items-start justify-content-between">
                     <h4 class="m-0">@L["RecentOrders"]</h4>
                     <Button Class="btn-link" Clicked="@(() => NavigationManager.NavigateTo("/Orders"))">@L["ViewAll"]</Button>
                 </Div>
