--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardBestSellers/DashboardBestSellers.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/DashboardBestSellers/DashboardBestSellers.razor
@@ -13,7 +13,7 @@
             {
                 for (int i = 0; i < 3; i++)
                 {
-                    <Div Class="d-flex align-items-center w-100 best-seller">
+                    <Div Class="d-flex align-items-start w-100 best-seller">
                         <Div Class="best-seller-image">
                             <Skeleton>
                                 <SkeletonItem ColumnSize="ColumnSize.Is10" Style="min-height: 50px;"></SkeletonItem>
