--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -1899,7 +1899,39 @@
         </EditForm>
     </ModalContent>
 </Modal>
+<Modal @ref="CropperModal" >
+    <ModalContent Size="ModalSize.Large">
+        <ModalHeader>
+             <ModalTitle>@L["LogoCropper"]</ModalTitle>
+                <CloseButton  Clicked="@CloseCropModal" />
+        </ModalHeader>
+        <ModalBody>
+            <Row>
+                <Column ColumnSize="ColumnSize.Is6">
+        <Cropper @ref="LogoCropper"
+                      Source="@imageToCrop"
+                      Style="aspect-ratio: 16 / 9;" 
+                      SelectionChanged="@OnSelectionChanged"
+                      ShowBackground="true"/>
+                      </Column>
+                      <Column ColumnSize="ColumnSize.Is6">
+                           <Div Margin="Margin.Is2.FromBottom">
+            <Button Color="Color.Primary" Clicked="@GetCroppedImage" Disabled="@cropButtonDisabled">Get Cropped Image</Button>
+            <Button Color="Color.Secondary" Clicked="@ResetSelection" Disabled="@cropButtonDisabled">Reset Selection</Button>
+        </Div>
+        <Image Source="@croppedImage" Border="Border.Is1" Style="width: 300px; height: 300px;" />
 
+                      </Column>
+                      </Row>
+
+    </ModalBody>
+    <ModalFooter>
+      
+        <Button Color="Color.Secondary" Clicked="@CloseCropModal">@L["Cancel"]</Button>
+        <Button Color="Color.Primary" Disabled="@croppedImage.IsNullOrWhiteSpace()" Clicked="@CropImageAsync">@L["Save"]</Button>
+    </ModalFooter>
+    </ModalContent>
+</Modal>
 @code {
 
 }
