--- a/src/Kooco.Pikachu.Blazor/Pages/Components/PikachuBadge.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Components/PikachuBadge.razor
@@ -1,10 +1,13 @@
-﻿<span class="pk-badge @_class">
+﻿<span class="pk-badge @_class" style="@Style">
     @ChildContent
 </span>
 
 @code {
     [Parameter]
     public string Class { get; set; }
+
+    [Parameter]
+    public string Style { get; set; }
 
     [Parameter]
     public RenderFragment? ChildContent { get; set; }
