--- a/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/DeliveryTemperatureCosts/DeliveryTemperatureCost.razor
@@ -77,7 +77,7 @@
                             Class="form-select form-select-sm"
                             Disabled=!IsLogisticProviderActivated
                             @onchange=@((e) => OnLogisticProviderChange(e, item))>
-                        <SelectItem Value="100">Select Logistics</SelectItem>
+                        <SelectItem Value="100">@L["SelectLogistics"]</SelectItem>
                         @foreach (object enumValue in GetLogisticsProviders(item.Temperature))
                         {
                             if (item.LogisticProvider is not null &&
@@ -98,7 +98,7 @@
                             Class="form-select form-select-sm"
                             Disabled=!IsLogisticProviderActivated
                             @onchange=@((e) => OnDeliveryMethodChange(e, item))>
-                        <SelectItem Value="100">Select Delivery Method</SelectItem>
+                        <SelectItem Value="100">@L["SelectDeliveryMethod"]</SelectItem>
                         @foreach (object enumValue in GetDeliveryMethods(item.Temperature, item.LogisticProvider))
                         {
                             if (item.DeliveryMethod?.ToString() == enumValue.ToString())
