--- a/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Dashboard/Dashboard.razor
@@ -1,4 +1,5 @@
 ﻿@using System
+@using Kooco.Pikachu.Blazor.Helpers
 @using Kooco.Pikachu.Blazor.Pages.Dashboard.DashboardBestSellers
 @using Kooco.Pikachu.Blazor.Pages.Dashboard.DashboardCharts
 @using Kooco.Pikachu.Blazor.Pages.Dashboard.DashboardOrdersTable
@@ -6,7 +7,9 @@
 @using Kooco.Pikachu.Dashboards
 @using Kooco.Pikachu.GroupBuys
 @using Kooco.Pikachu.Items.Dtos
+@using Kooco.Pikachu.Localization
 @using Kooco.Pikachu.Reports
+@using System.Globalization
 <link href="css/dashboard.css" rel="stylesheet" />
 @attribute [Authorize]
 @inherits PikachuComponentBase
@@ -32,7 +35,10 @@
             </Column>
             <Column ColumnSize="ColumnSize.Is12.Is6.OnDesktop.Is4.OnFullHD">
                 <Label>@L["TimeRange"]</Label>
-                <AntDesign.RangePicker TValue="DateTime?[]" Value="@Filters.SelectedDateRange" />
+                <AntDesign.RangePicker TValue="DateTime?[]" Value="@Filters.SelectedDateRange"
+                                       Format="@AntLocaleHelper.GetFormat()"
+                                       Locale="AntLocaleHelper.GetLocale()"
+                                       CultureInfo="@CultureInfo.CurrentCulture" />
             </Column>
             <Column ColumnSize="ColumnSize.Is12.Is6.OnDesktop.Is4.OnFullHD">
                 <Label>@L["SpecificGroupBuys"]</Label>
@@ -133,6 +139,10 @@
                                 </DisplayTemplate>
                             </DataGridColumn>
                         </DataGridColumns>
+                        <FirstPageButtonTemplate>@L[PikachuResource.FirstPage]</FirstPageButtonTemplate>
+                        <PreviousPageButtonTemplate>@L[PikachuResource.PrevPage]</PreviousPageButtonTemplate>
+                        <NextPageButtonTemplate>@L[PikachuResource.NextPage]</NextPageButtonTemplate>
+                        <LastPageButtonTemplate>@L[PikachuResource.LastPage]</LastPageButtonTemplate>
                     </DataGrid>
                 }
             </CardBody>
