--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetails.razor
@@ -1,11 +1,9 @@
 ﻿@page "/Members/Details/{Id:guid}"
 @using Kooco.Pikachu.Members
-
 @using Kooco.Pikachu.Permissions
 @attribute [Authorize(PikachuPermissions.Members.Default)]
 @inherits PikachuComponentBase
 @inject IMemberAppService MemberAppService
-
 @inject NavigationManager NavigationManager
 
 <Div Class="rounded-cards">
@@ -24,7 +22,8 @@
             </Items>
             <Content>
                 <TabPanel Name="Details">
-                    <MemberDetailsTab Member="Member" CanDeleteMember="CanDeleteMember" OnDelete="@NavigateToMember" />
+                    <MemberDetailsTab Member="Member" CanDeleteMember="CanDeleteMember" 
+                        OnDelete="@NavigateToMember" OnBlacklistChange="@GetMemberAsync" />
                 </TabPanel>
                 <TabPanel Name="Orders">
                     <MemberOrdersTab Member="Member"></MemberOrdersTab>
