--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsHeader.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberDetailsHeader.razor
@@ -6,7 +6,7 @@
     <CardBody>
         @if (Member != null && Member.Id != Guid.Empty)
         {
-            <Div Class="text-dark d-flex align-items-center justify-content-between">
+            <Div Class="text-dark d-flex align-items-start justify-content-between">
                 <Div>
                     <h4 class="m-0 mb-1">@Member?.Email</h4>
                     @L["UserId"]:
