--- a/src/Kooco.Pikachu.Blazor/_Imports.razor
+++ b/src/Kooco.Pikachu.Blazor/_Imports.razor
@@ -6,12 +6,18 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Kooco.Pikachu.Blazor
 @using Blazorise
+@using Blazorise.Cropper
 @using Blazorise.DataGrid
+@using Blazorise.LoadingIndicator
+@using Blazorise.Splitter
+@using Volo.Abp.AspNetCore.Components.Web.Theming.Layout
 @using Volo.Abp.BlazoriseUI
 @using Volo.Abp.BlazoriseUI.Components
+@using Kooco.Pikachu.Blazor
+@using Kooco.Pikachu.Blazor.Components
+@using Kooco.Pikachu.Blazor.Helpers
 @using Kooco.Pikachu.Blazor.Layouts
 @using Kooco.Pikachu.Blazor.Pages.Components
-@using Blazorise.Splitter
-@using Blazorise.Cropper
+@using Kooco.Pikachu.Permissions
+@using Kooco.Pikachu.TenantManagement
